the-project-formerly-known-as-safe/releaseTests/testCheck1/expected
./A.java:1: error: incompatible types
public class A { /*@ invariant 0; */ }
                               ^
  required: boolean
  found:    int
1 error
